[package]
name = "vibrant-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # CLI args
ratatui = "0.28"  # Core TUI widgets and layouts
crossterm = "0.28"  # Terminal backend for events and rendering
syntect = "5.2"  # Syntax highlighting (inspired by Rich)
markdown = "1.0"  # Markdown rendering
anyhow = "1.0"  # Error handling
rand = "0.8"  # For demo data
